Add / to the beginning of paths to static files (css, images, js)
Without this / root sign browser loads files in pages like
http://localhost:8080/catalogs/catalog from
http://localhost:8080/catalogs/stylesheet.css, but not from root
directory like http://localhost:8080/stylesheet.css

--- a/web/templates/pages/catalog.tmpl
+++ b/web/templates/pages/catalog.tmpl
@@ -5,7 +5,7 @@
 
     <!-- Single Blog Post Thumb -->
     <div class="single-blog-post-thumb">
-        <img src="img/bg-img/bg-8.jpg" alt="">
+        <img src="/img/bg-img/bg-8.jpg" alt="">
     </div>
 
     <div class="container">
