--- a/web/templates/base/header.tmpl
+++ b/web/templates/base/header.tmpl
@@ -6,7 +6,7 @@
         <!-- Classy Menu -->
         <nav class="classy-navbar" id="essenceNav">
             <!-- Logo -->
-            <a class="nav-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a>
+            <a class="nav-brand" href="index.html"><img src="/img/core-img/logo.png" alt=""></a>
             <!-- Navbar Toggler -->
             <div class="classy-navbar-toggler">
                 <span class="navbarToggler"><span></span><span></span><span></span></span>
@@ -47,7 +47,7 @@
                                     <li><a href="shop.html">Trench</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
-                                    <img src="img/bg-img/bg-6.jpg" alt="">
+                                    <img src="/img/bg-img/bg-6.jpg" alt="">
                                 </div>
                             </div>
                         </li>
@@ -82,15 +82,15 @@
             </div>
             <!-- Favourite Area -->
             <div class="favourite-area">
-                <a href="#"><img src="img/core-img/heart.svg" alt=""></a>
+                <a href="#"><img src="/img/core-img/heart.svg" alt=""></a>
             </div>
             <!-- User Login Info -->
             <div class="user-login-info">
-                <a href="#"><img src="img/core-img/user.svg" alt=""></a>
+                <a href="#"><img src="/img/core-img/user.svg" alt=""></a>
             </div>
             <!-- Cart Area -->
             <div class="cart-area">
-                <a href="#" id="essenceCartBtn"><img src="img/core-img/bag.svg" alt=""> <span>3</span></a>
+                <a href="#" id="essenceCartBtn"><img src="/img/core-img/bag.svg" alt=""> <span>3</span></a>
             </div>
         </div>
 
