--- a/web/templates/base/right-area.tmpl
+++ b/web/templates/base/right-area.tmpl
@@ -7,7 +7,7 @@
 
     <!-- Cart Button -->
     <div class="cart-button">
-        <a href="#" id="rightSideCart"><img src="img/core-img/bag.svg" alt=""> <span>3</span></a>
+        <a href="#" id="rightSideCart"><img src="/img/core-img/bag.svg" alt=""> <span>3</span></a>
     </div>
 
     <div class="cart-content d-flex">
@@ -17,7 +17,7 @@
             <!-- Single Cart Item -->
             <div class="single-cart-item">
                 <a href="#" class="product-image">
-                    <img src="img/product-img/product-1.jpg" class="cart-thumb" alt="">
+                    <img src="/img/product-img/product-1.jpg" class="cart-thumb" alt="">
                     <!-- Cart Item Desc -->
                     <div class="cart-item-desc">
                       <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
@@ -33,7 +33,7 @@
             <!-- Single Cart Item -->
             <div class="single-cart-item">
                 <a href="#" class="product-image">
-                    <img src="img/product-img/product-2.jpg" class="cart-thumb" alt="">
+                    <img src="/img/product-img/product-2.jpg" class="cart-thumb" alt="">
                     <!-- Cart Item Desc -->
                     <div class="cart-item-desc">
                       <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
@@ -49,7 +49,7 @@
             <!-- Single Cart Item -->
             <div class="single-cart-item">
                 <a href="#" class="product-image">
-                    <img src="img/product-img/product-3.jpg" class="cart-thumb" alt="">
+                    <img src="/img/product-img/product-3.jpg" class="cart-thumb" alt="">
                     <!-- Cart Item Desc -->
                     <div class="cart-item-desc">
                       <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
