--- a/web/templates/pages/root.tmpl
+++ b/web/templates/pages/root.tmpl
@@ -1,7 +1,7 @@
 {{define "main"}}
 
 <!-- ##### Welcome Area Start ##### -->
-<section class="welcome_area bg-img background-overlay" style="background-image: url(img/bg-img/bg-1.jpg);">
+<section class="welcome_area bg-img background-overlay" style="background-image: url(/img/bg-img/bg-1.jpg);">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12">
@@ -22,7 +22,7 @@
         <div class="row justify-content-center">
             <!-- Single Catagory -->
             <div class="col-12 col-sm-6 col-md-4">
-                <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg-2.jpg);">
+                <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(/img/bg-img/bg-2.jpg);">
                     <div class="catagory-content">
                         <a href="#">Clothing</a>
                     </div>
@@ -30,7 +30,7 @@
             </div>
             <!-- Single Catagory -->
             <div class="col-12 col-sm-6 col-md-4">
-                <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg-3.jpg);">
+                <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(/img/bg-img/bg-3.jpg);">
                     <div class="catagory-content">
                         <a href="#">Shoes</a>
                     </div>
@@ -38,7 +38,7 @@
             </div>
             <!-- Single Catagory -->
             <div class="col-12 col-sm-6 col-md-4">
-                <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg-4.jpg);">
+                <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(/img/bg-img/bg-4.jpg);">
                     <div class="catagory-content">
                         <a href="#">Accessories</a>
                     </div>
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="cta-content bg-img background-overlay" style="background-image: url(img/bg-img/bg-5.jpg);">
+                <div class="cta-content bg-img background-overlay" style="background-image: url(/img/bg-img/bg-5.jpg);">
                     <div class="h-100 d-flex align-items-center justify-content-end">
                         <div class="cta--text">
                             <h6>-60%</h6>
@@ -90,9 +90,9 @@
                     <div class="single-product-wrapper">
                         <!-- Product Image -->
                         <div class="product-img">
-                            <img src="img/product-img/product-1.jpg" alt="">
+                            <img src="/img/product-img/product-1.jpg" alt="">
                             <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product-2.jpg" alt="">
+                            <img class="hover-img" src="/img/product-img/product-2.jpg" alt="">
                             <!-- Favourite -->
                             <div class="product-favourite">
                                 <a href="#" class="favme fa fa-heart"></a>
@@ -120,9 +120,9 @@
                     <div class="single-product-wrapper">
                         <!-- Product Image -->
                         <div class="product-img">
-                            <img src="img/product-img/product-2.jpg" alt="">
+                            <img src="/img/product-img/product-2.jpg" alt="">
                             <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product-3.jpg" alt="">
+                            <img class="hover-img" src="/img/product-img/product-3.jpg" alt="">
                             <!-- Favourite -->
                             <div class="product-favourite">
                                 <a href="#" class="favme fa fa-heart"></a>
@@ -150,9 +150,9 @@
                     <div class="single-product-wrapper">
                         <!-- Product Image -->
                         <div class="product-img">
-                            <img src="img/product-img/product-3.jpg" alt="">
+                            <img src="/img/product-img/product-3.jpg" alt="">
                             <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product-4.jpg" alt="">
+                            <img class="hover-img" src="/img/product-img/product-4.jpg" alt="">
 
                             <!-- Product Badge -->
                             <div class="product-badge offer-badge">
@@ -186,9 +186,9 @@
                     <div class="single-product-wrapper">
                         <!-- Product Image -->
                         <div class="product-img">
-                            <img src="img/product-img/product-4.jpg" alt="">
+                            <img src="/img/product-img/product-4.jpg" alt="">
                             <!-- Hover Thumb -->
-                            <img class="hover-img" src="img/product-img/product-5.jpg" alt="">
+                            <img class="hover-img" src="/img/product-img/product-5.jpg" alt="">
 
                             <!-- Product Badge -->
                             <div class="product-badge new-badge">
@@ -228,27 +228,27 @@
 <div class="brands-area d-flex align-items-center justify-content-between">
     <!-- Brand Logo -->
     <div class="single-brands-logo">
-        <img src="img/core-img/brand1.png" alt="">
+        <img src="/img/core-img/brand1.png" alt="">
     </div>
     <!-- Brand Logo -->
     <div class="single-brands-logo">
-        <img src="img/core-img/brand2.png" alt="">
+        <img src="/img/core-img/brand2.png" alt="">
     </div>
     <!-- Brand Logo -->
     <div class="single-brands-logo">
-        <img src="img/core-img/brand3.png" alt="">
+        <img src="/img/core-img/brand3.png" alt="">
     </div>
     <!-- Brand Logo -->
     <div class="single-brands-logo">
-        <img src="img/core-img/brand4.png" alt="">
+        <img src="/img/core-img/brand4.png" alt="">
     </div>
     <!-- Brand Logo -->
     <div class="single-brands-logo">
-        <img src="img/core-img/brand5.png" alt="">
+        <img src="/img/core-img/brand5.png" alt="">
     </div>
     <!-- Brand Logo -->
     <div class="single-brands-logo">
-        <img src="img/core-img/brand6.png" alt="">
+        <img src="/img/core-img/brand6.png" alt="">
     </div>
 </div>
 <!-- ##### Brands Area End ##### -->
